# projects

./: .gitignore
255/Clustering/: ClusteringC.ipynb  ClusteringE.ipynb  ClusteringH.ipynb  readme.txt
255/DataprepEDAVisual/: dataprep.ipynb  datapreptime.ipynb  readme.txt
255/DecisionTree/: Adaboost.ipynb  DecisiontreesGBM.ipynb  RandomForest.ipynb  decisiontree.ipynb  decisiontreetechniques.ipynb  readme.md
255/DimensionalityReduction/: DimensionalityReduction.ipynb  readme.txt
255/HW1/: 1B)Multimodal_tabular.ipynb  readme.md
255/HW2/: HW2gradio1.ipynb  HW2gradio2.ipynb  HW2timeseriesw.ipynb  readme.txt
255/PytonAIPairAkkio/: Pythontutorial.ipynb
255/ShortStory/: readme.md
255/data_engineering/: readme.txt
256/timeseries/: readme.txt
272/: HW#1 Ansible.docx
arisdream/: config.js  ecosystem.config.js  index.js  package-lock.json  package.json
arisdream/client/: package-lock.json  package.json
arisdream/controllers/: auth.controller.js  upload.controller.js
arisdream/public/: test2.html
arisdream/services/: auth.service.js  db.js  upload.service.js
booktable/: readme.md
booktable/code/: .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.json
booktable/files/: db.txt
braintumor/: BrainTumor.ipynb  readme.md
schoolprojs/fall2025/297/BuildFullstackE2EAgentic/personal-expense-assistant/: backend.py  frontend.py  logger.py  main.py  pyproject.toml  settings.yaml  utils.py
schoolprojs/fall2025/297/BuildFullstackE2EAgentic/personal-expense-assistant/expense_manager_agent/: .env  agent.py  callbacks.py  tools.py
(+323 files in other folders)
